# kronos

./: .gitignore  CMakeLists.txt  build.sh  memorder_variants.md  memorder_variants.sh
build_result/: kronos_rv32
cmake/: AddHDLVerilator.cmake  AddRISCV.cmake
riscv-compliance/: CMakeLists.txt  debug_lui.S  debug_lui.elf  kronos_compliance.cpp  kronos_compliance_top.sv  kronos_elfsim.cpp
rtl/core/: kronos_EX.sv  kronos_ID.sv  kronos_RF.sv  kronos_core.sv  kronos_csr.sv  kronos_lsu.sv  kronos_types.sv
rtl/memory/: generic_spram.sv
rtl/platform/krz/: krz_top.sv  krzboy.sv
rtl/platform/snowflake/: snowflake_top.sv
software/skiptrap/: Makefile  check_skiptrap.py  skiptrap.S  skiptrap.ld
tests/unit/: lsu_unit_test.sv
